# icurve/icurve/v1/api/data_dataName_label.py
@@ -3,7 +3,6 @@ from __future__ import absolute_import, print_function
 
 from flask import request, g
 
-from ..utils import MARK_ENUM, parse_mark
 from ..models import Point, db
 from . import Resource
 from .. import schemas
@@ -14,8 +13,8 @@ class DataDatanameLabel(Resource):
     def put(self, dataName):
         Point.query.filter(db.and_(
             Point.data_name.is_(dataName),
-            Point.timestamp.between(g.form['startTime'], g.form['endTime'])
-        )).update({Point.mark: g.form['label']}, synchronize_session=False)
+            Point.timestamp.between(g.args['startTime'], g.args['endTime'])
+        )).update({Point.mark: g.args['label']}, synchronize_session=False)
         db.session.commit()
 
-        return {'msg': 'OK', 'traceId': '', 'server': ''}, 200, None
+        return self.render(), 200, None
